# HomeCookingManager

./: CMakeLists.txt  README.md  main.cpp
Manager/: CMakeLists.txt  Functions.cpp  Functions.h  Ingredient.h  Inventory.cpp  Inventory.h  Manager.h  Product.h  ProductDatabase.cpp  ProductDatabase.h  Recipe.cpp  Recipe.h  RecipeBook.cpp  RecipeBook.h
Product/: CMakeLists.txt  Ingredient.h  Inventory.h  Invetory.cpp  Product.cpp  Product.h  Recipe.cpp
